service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiny_router-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: tiny_router
